[gd_scene load_steps=4 format=2]

[ext_resource path="res://form.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://output.tscn" type="PackedScene" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Form" parent="." instance=ExtResource( 1 )]

[node name="Output" parent="." instance=ExtResource( 3 )]
visible = false

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[connection signal="submit" from="Form" to="." method="_on_Form_submit"]
[connection signal="back" from="Output" to="." method="_on_Output_back"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
